--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files (keep .env.example)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +43,25 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+flask_embedding_api/embedding_env/
+venv/
+ENV/
+
+# ChromaDB
+/chroma/
+
+# Codebase export
+codebase_export.txt
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
