--- a/flask_embedding_api/requirements.txt
+++ b/flask_embedding_api/requirements.txt
@@ -1,5 +1,9 @@
-flask
-flask-cors
-sentence-transformers
-numpy
-torch
+flask>=2.3.0
+flask-cors>=4.0.0
+sentence-transformers>=2.2.2
+numpy>=1.24.0
+torch>=2.0.0
+transformers>=4.30.0
+scikit-learn>=1.3.0
+python-dotenv>=1.0.0
+gunicorn>=21.0.0
