--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "docker": "^0.2.14",
     "firebase": "^12.0.0",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
